# soundcloud_qt

./: .gitignore  CMakeLists.txt  Main.qml  config.json  main.cpp
components/: Playlists.qml  Search.qml
data/: consts.h
servers/: oauthserver.cpp  oauthserver.h
services/: PlaylistsService.cpp  PlaylistsService.h  authservice.cpp  authservice.h  config.h  trackservice.cpp  trackservice.h  userservice.cpp  userservice.h
structs/: Playlist.h  track.h  user.h
